# aula18_bootcamp

./: arquivo01.py  pokemon.db  pyproject.toml
src/: controller.py  db.py  main.py  schema.py
