[tool.poetry]
name = "aula18-bootcamp"
version = "0.1.0"
description = ""
authors = ["Guilherme <gui.santos.sa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydentic = "^0.0.1.dev3"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
